Menu center correction on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,10 +121,10 @@ nav {
 }
 
 .er-nav-icons {
-    letter-spacing: 1em;
-    -ms-transform: translateX(1em);
-    -webkit-transform: translateX(1em);
-    transform: translateX(1em);
+    letter-spacing: 0.8em;
+    -ms-transform: translateX(0.5em);
+    -webkit-transform: translateX(0.5em);
+    transform: translateX(0.5em);
     margin-left: auto;
     margin-right: auto;
 }
